added endpoints to delete and cancel events
